--- a/src/components/helpers/Navbar.css
+++ b/src/components/helpers/Navbar.css
@@ -109,6 +109,14 @@ nav {
   margin-right: 20px;
 }
 
+.nav-menu button {
+  border: none;
+  background-color: transparent;
+  width: 40px;
+  height: 30px;
+  cursor: pointer;
+}
+
 .nav-search {
   margin-left: 20px;
 }
