--- a/src/components/pages/Account.css
+++ b/src/components/pages/Account.css
@@ -1,64 +1,157 @@
 .account-container {
-  width: 100%;
-  max-width: 500px;
-  margin: 50px auto;
-  padding: 20px;
-  border: 1px solid #e0e0e0;
-  border-radius: 8px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
 }
 
-.account-nav {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid #e0e0e0;
-  margin-bottom: 20px;
+.account-container-fade {
+  opacity: 1;
+  transition: all 1.3s;
 }
 
-.account-nav button {
-  flex: 1;
-  padding: 10px;
-  border: none;
-  background-color: transparent;
+.account-logo-container {
+  position: relative;
+  height: 150px;
+  background-image: url("../../../public/img/logo.png");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+}
+
+.account-logo-container button {
+  position: absolute;
+  width: 80px;
+  height: 80px;
   cursor: pointer;
-  font-weight: bold;
-  transition: background-color 0.3s ease;
+  background-color: transparent;
+  border: none;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.account-nav button.active {
-  background-color: #f0f0f0;
+.account-login-signup-container {
+  width: 70%;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  max-width: 1920px;
 }
 
-.login-form,
-.signup-form,
-.forgot-form {
+.account-login-signup-container form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 50%;
+}
+
+.account-login-signup-container form h2 {
+  margin-bottom: 40px;
+  font-weight: 500;
+  letter-spacing: 3px;
+}
+
+.account-login-signup-container input[type="text"],
+.account-login-signup-container input[type="email"],
+.account-login-signup-container input[type="password"] {
+  width: 90%;
+  max-width: 350px;
+  height: 40px;
+  margin-bottom: 40px;
+  font-size: 15px;
+  padding: 10px;
+  border: 2px solid grey;
+}
+
+.account-login-signup-container button {
+  width: 97%;
+  max-width: 370px;
+  height: 50px;
+  border: none;
+  background-color: black;
+  color: white;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.account-checkbox-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.account-checkbox {
+  margin-right: 10px;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+}
+
+.account-checkbox-container label {
+  font-size: 9px;
+  letter-spacing: 1px;
+  line-height: 20px;
+}
+
+.account-login-flexbox {
+  width: 50%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  border-right: 2px solid #ededed;
 }
 
-.login-form input,
-.signup-form input,
-.forgot-form input {
-  padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #e0e0e0;
-  border-radius: 5px;
+.account-login-flexbox p {
+  text-decoration: underline;
+  color: #654121;
 }
 
-.login-form button,
-.signup-form button,
-.forgot-form button {
-  padding: 10px;
-  background-color: #333;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+.account-signup-flexbox {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.login-form button:hover,
-.signup-form button:hover,
-.forgot-form button:hover {
-  background-color: #555;
+.account-signup-flexbox button {
+  margin-bottom: 50px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .account-login-signup-container {
+    width: 100%;
+  }
+
+  .account-login-signup-container form {
+    width: 70%;
+    max-width: 400px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .account-logo-container {
+    margin-bottom: 0px;
+  }
+
+  .account-login-signup-container {
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+
+  .account-login-signup-container form {
+    width: 100%;
+  }
+
+  .account-login-flexbox {
+    width: 100%;
+    border-right: none;
+  }
+
+  .account-signup-flexbox {
+    width: 100%;
+  }
 }
